# dependabot-bazel-test

./: .gitignore  BUILD.bazel  Example.java  ExampleTest.java  MODULE.bazel  README.md  WORKSPACE  maven_install.json
.github/: dependabot.yml
