load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "example",
    srcs = ["Example.java"],
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:org_apache_commons_commons_lang3",
    ],
)

java_test(
    name = "example_test",
    srcs = ["ExampleTest.java"],
    test_class = "ExampleTest",
    deps = [
        ":example",
        "@maven//:junit_junit",
    ],
)
